fix "out of bounds" error

--- a/src/style.css
+++ b/src/style.css
@@ -67,7 +67,7 @@ footer {
   /* height: 500px; */
 }
 .gameBoard.right {
-  display: none;
+  /* display: none; */
 }
 
 .cell {
